syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";

option go_package = "api/v1;v1";

// The task service definition.
service Task {
	// Create a task
	rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {
		option (google.api.http) = {
			post: "/tasks"
		};
	}

	rpc ExecuteTranslationTask(ExecuteTranslationTaskRequest) returns (ExecuteTranslationTaskRequestResponse) {
		option (google.api.http) = {
			post: "/tasks/{task_id}/translate"
		};
	}

	rpc DownloadTranslatedContent(DownloadTranslatedContentRequest) returns (DownloadTranslatedContentResponse) {
		option (google.api.http) = {
			get: "/tasks/{task_id}"
		};
	}


	rpc GetTaskDetail(GetTaskDetailRequest) returns (GetTaskDetailResponse) {
		option (google.api.http) = {
			get: "/tasks/{task_id}/download"
		};
	}
	rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {
		option (google.api.http) = {
			post: "/auth/users"
		};
	}
	rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {
		option (google.api.http) = {
			post: "/auth/login"
		};
	}
}

// The request message containing the user's name.
message CreateTaskRequest {
}

message CreateTaskResponse{
	int64 task_id = 1;
}

message ExecuteTranslationTaskRequest {
	int64 task_id = 1;
	string content = 2;
}

message ExecuteTranslationTaskRequestResponse {
}

message GetTaskDetailRequest{
	int64 task_id = 1;
}

message GetTaskDetailResponse {
	int64 task_id = 1;
	int32  status = 2;
	string execute_content = 3;
}

message DownloadTranslatedContentRequest {
	int64 task_id = 1;
}

message DownloadTranslatedContentResponse{
	int64 task_id = 1;
	string content = 2;
}

message	RegisterUserRequest {
	string user_name = 1;
	string pwd =2;
}

message RegisterUserResponse {
	int64 user_id = 1;
}

message UserLoginRequest {
	string user_name = 1;
	string pwd =2;
}

message UserLoginResponse {
	string token = 1;
}


